--- a/siva-parent/siva-sample-application/src/main/resources/templates/layout/main-layout.jade
+++ b/siva-parent/siva-sample-application/src/main/resources/templates/layout/main-layout.jade
@@ -3,17 +3,15 @@ html
         title SiVa Demo application
         meta(charset="utf-8")
         meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
-        meta(name="viewport",content="width=device-width, initial-scale=1")
+        meta(name="viewport", content="width=device-width, initial-scale=1")
         link(rel="stylesheet", href="owr/site.css")
     body
         block notificationBlock
-        nav#top-navbar.navbar.navbar-dark.bg-inverse.navbar-sticky-top
-            .navbar-header
-                .container
-                    a.navbar-brand(href="#")
-                        img(src="img/open-eid-logo.svg")
-                    a.navbar-brand(href="#")
-                        span SiVa Sample Application
+        nav#top-navbar.navbar.navbar-dark.bg-dark
+            .container
+                a.navbar-brand(href="#")
+                    img.d-inline-block.align-top(src="img/open-eid-logo.svg")
+                    | SiVa Sample Application
         .container#content
             .row
                 .col-md-12.col-lg-12
